--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 
           <label for="phone-number">Phone:</label>
           <input type="tel" id="phone-number" name="phone-number" />
-          <button class="btn">Submit</button>
+          <button type="submit" class="btn">Submit</button>
         </form>
+        <ion-icon name="close" class="close"></ion-icon>
       </div>
     </main>
 
