--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <table class="table">
         <thead>
           <tr>
+            <th>ID</th>
             <th>Name</th>
             <th>Last Name</th>
             <th>Email</th>
@@ -58,16 +59,16 @@
       <div class="form-container">
         <form action="javascript:void(0);" class="form">
           <label for="name">Name:</label>
-          <input type="text" name="name" id="name" required />
+          <input type="text" name="name" id="name" />
 
           <label for="last-name">Last name:</label>
-          <input type="text" name="last-name" id="last-name" required />
+          <input type="text" name="last-name" id="last-name" />
 
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email" />
 
           <label for="phone-number">Phone:</label>
-          <input type="tel" id="phone-number" name="phone-number" required />
+          <input type="tel" id="phone-number" name="phone-number" />
           <button type="submit" class="btn">Submit</button>
         </form>
         <ion-icon name="close" class="close"></ion-icon>
