--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <header><h1 class="header">Address Book</h1></header>
       <ion-icon name="person-add-outline" class="add-person"></ion-icon>
     </nav>
+    <div class="form-overlay"></div>
     <main class="main-section">
       <table class="table">
         <thead>
@@ -32,11 +33,11 @@
         </thead>
 
         <tbody class="table-body">
-          <!--   <tr>
+          <!-- <tr>
             <td>1</td>
             <td>Aleksandar</td>
             <td>Kekerovic</td>
-            <td>aleksandar.kekerovic97@gmail.com</td>
+            <td>aleksandar@gmail.com</td>
             <td>066954824</td>
           </tr>
           <tr>
@@ -52,10 +53,9 @@
             <td>Janka</td>
             <td>oj@gmail.com</td>
             <td>158456564</td>
-          </tr>-->
+          </tr> -->
         </tbody>
       </table>
-
       <div class="form-container">
         <form action="javascript:void(0);" class="form">
           <label for="name">Name:</label>
@@ -70,8 +70,8 @@
           <label for="phone-number">Phone:</label>
           <input type="tel" id="phone-number" name="phone-number" />
           <button type="submit" class="btn">Submit</button>
+          <ion-icon name="close" class="close"></ion-icon>
         </form>
-        <ion-icon name="close" class="close"></ion-icon>
       </div>
     </main>
 
