Delete Button added and functional

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <th>Last Name</th>
             <th>Email</th>
             <th>Phone</th>
+            <th>Edit/Delete</th>
           </tr>
         </thead>
 
@@ -56,6 +57,7 @@
           </tr> -->
         </tbody>
       </table>
+      <button class="edit-del-btn delete-all">Delete All</button>
       <div class="form-container">
         <form action="javascript:void(0);" class="form">
           <label for="name">Name:</label>
